# minecraft-mod-downloader

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LOGBUCH.md  README.md
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml
src/: main.rs
src/adapters/: mod.rs  modrinth.rs
src/app/: app_state.rs  app_ui.rs  effect.rs  mod.rs  runtime.rs
src/business/: mod.rs
src/common/: app.rs  app_icon.rs  mod.rs  modal_manager.rs  notification_manager.rs  pop_up_manager.rs  top_panel.rs
src/common/prefabs/: mod.rs  modal_window.rs  notification_window.rs  popup_window.rs  view_controller.rs
src/domain/: advanced_launcher.rs  launcher.rs  launcher_service.rs  mod.rs  mod_service.rs  mod_source.rs  mod_src.rs  version_manifest.rs
src/infra/: api_service.rs  config.rs  config_manager.rs  download_metadata.rs  icon_service.rs  icon_worker.rs  java_detector.rs  legacy_list.rs  minecraft_detector.rs  mod.rs  mod_copier.rs  natives_extractor.rs  project_cache.rs
src/infra/import/: import.rs
src/launcher/: mod.rs
src/launcher/domain/: advanced_launcher.rs  launcher.rs  mod.rs  version_manifest.rs
src/launcher/infra/: fabric_installer.rs  java_detector.rs  java_downloader.rs  minecraft_detector.rs  minecraft_downloader.rs  mod.rs  mod_copier.rs  natives_extractor.rs
src/launcher/ui/: java_download_window.rs  launcher_panel.rs  minecraft_download_window.rs  mod.rs
src/resource_downloader/: mod.rs
src/resource_downloader/app/: dialogs.rs  mod.rs  rd_handler.rs
src/resource_downloader/app/components/: list_settings_component.rs  mod.rs
src/resource_downloader/app/modals/: create_modal.rs  mod.rs  (+7 more)
src/resource_downloader/business/: effects.rs  events.rs  list_pool.rs  mod.rs  rd_state.rs
src/resource_downloader/domain/: game.rs  lnk_types.rs  mod.rs  project.rs  project_list.rs  project_operations.rs
src/resource_downloader/infra/: config_manager.rs  game_detection.rs  legacy_list.rs  lists_manager.rs  mod.rs  rd_runtime.rs
src/ui/: app.rs  dialogs.rs  mod.rs  view_state.rs
src/ui/panels/: main_panel.rs  mod.rs  sidebar_panel.rs  top_panel.rs
src/ui/windows/: collection_import_window.rs  create_list_window.rs  import_window.rs  legacy_import_settings_window.rs  legacy_window.rs  list_settings_window.rs  mod.rs  search_window.rs  settings_window.rs
src/utils/: mod.rs
(+29 files in other folders)
