[package]
name = "minecraft_mod_downloader"
version = "0.0.0"
edition = "2024"
authors = ["Minecraft Mod Downloader Contributors"]
description = "A GUI-based Minecraft mod downloader."

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", features = ["png"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rfd = "0.15"
async-trait = "0.1"
urlencoding = "2"